complate auction skelate

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/layout.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/hero.css">
+    <link rel="stylesheet" href="assets/css/auctions.css">
 </head>
 
 <body>
@@ -54,9 +55,7 @@
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <form class="header__search-box">
                             <i class="fa-solid fa-magnifying-glass"></i>
-                            <input class="search__box-input"
-                            placeholder="search..."
-                            type="text">
+                            <input class="search__box-input" placeholder="search..." type="text">
                         </form>
                     </div>
                     <div class="header__wallet">
@@ -90,7 +89,7 @@
                             </div>
                             <div class="slider__description">
                                 <p>
-                                    Marketplace for monster character cllections non fungible token NFTs                                             
+                                    Marketplace for monster character cllections non fungible token NFTs
                                 </p>
                             </div>
                         </div>
@@ -110,7 +109,45 @@
                         <img src="assets/images/02_hero/imgslider2.png" alt=" hero">
                     </div>
                 </div>
-           
+
+            </section>
+            <section id="live-auctions">
+                <div class="auctions__top">
+                    <p>Live Auctions</p>
+                    <a href="#">EXPLORE MORE</a>
+                </div>
+                <div class="auctions__bottom">
+                    <div class="auction__card">
+                        <div class="auction__card-top">
+                            <img src="assets/images/03_Live Auctions/card-item8.jpg" alt="">
+                            <p class="auction__card-like">
+                                100
+                            </p>
+                            <p class="auction__card-time">
+                                5 : 22 : 57 : 47
+                            </p>
+                        </div>
+                        <div class="auction_card-bottom">
+                            <div class="auction__title">
+                                <p>Hamlet Contemplanents</p>
+                                <span>BSC</span>
+                            </div>
+                            <div class="auction__creator">
+                                <div class="creator_left">
+                                    <img src="assets/images/04_Top Seller/avt-1.jpg" alt="avatarr">
+                                    <div class="creator__info">
+                                        <span>creator</span>
+                                        <p>salvadordali</p>
+                                    </div>
+                                </div>
+                                <div class="creator_right">
+                                    <span>Current Bid</span>
+                                    <p>4.89 ETH</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
 
