complate section acution

--- a/index.html
+++ b/index.html
@@ -119,17 +119,22 @@
                 <div class="auctions__bottom">
                     <div class="auction__card">
                         <div class="auction__card-top">
-                            <img src="assets/images/03_Live Auctions/card-item8.jpg" alt="">
+                            <img class="card__img" src="assets/images/03_Live Auctions/card-item8.jpg" alt="">
                             <p class="auction__card-like">
+                                <i class="fa-regular fa-heart"></i>
                                 100
+                            </p>
+                            <p class="auction__card-bag">
+                                <i class="fa-solid fa-bag-shopping"></i>
+                                place bid
                             </p>
                             <p class="auction__card-time">
                                 5 : 22 : 57 : 47
                             </p>
                         </div>
-                        <div class="auction_card-bottom">
+                        <div class="auction__card-bottom">
                             <div class="auction__title">
-                                <p>Hamlet Contemplanents</p>
+                                <h5>Hamlet Contemplanents</h5>
                                 <span>BSC</span>
                             </div>
                             <div class="auction__creator">
@@ -137,18 +142,173 @@
                                     <img src="assets/images/04_Top Seller/avt-1.jpg" alt="avatarr">
                                     <div class="creator__info">
                                         <span>creator</span>
-                                        <p>salvadordali</p>
+                                        <a>salvadordali</a>
                                     </div>
                                 </div>
                                 <div class="creator_right">
                                     <span>Current Bid</span>
-                                    <p>4.89 ETH</p>
+                                    <h5>4.89 ETH</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="auction__card">
+                        <div class="auction__card-top">
+                            <img class="card__img" src="assets/images/03_Live Auctions/image-box-10.jpg" alt="">
+                            <p class="auction__card-like">
+                                <i class="fa-regular fa-heart"></i>
+                                100
+                            </p>
+                            <p class="auction__card-bag">
+                                <i class="fa-solid fa-bag-shopping"></i>
+                                place bid
+                            </p>
+                            <p class="auction__card-time">
+                                5 : 22 : 57 : 47
+                            </p>
+                        </div>
+                        <div class="auction__card-bottom">
+                            <div class="auction__title">
+                                <h5>Hamlet Contemplanents</h5>
+                                <span>BSC</span>
+                            </div>
+                            <div class="auction__creator">
+                                <div class="creator_left">
+                                    <img src="assets/images/04_Top Seller/avt-2.jpg" alt="avatarr">
+                                    <div class="creator__info">
+                                        <span>creator</span>
+                                        <a>salvadordali</a>
+                                    </div>
+                                </div>
+                                <div class="creator_right">
+                                    <span>Current Bid</span>
+                                    <h5>4.89 ETH</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="auction__card">
+                        <div class="auction__card-top">
+                            <img class="card__img" src="assets/images/03_Live Auctions/image-box-21.jpg" alt="">
+                            <p class="auction__card-like">
+                                <i class="fa-regular fa-heart"></i>
+                                100
+                            </p>
+                            <p class="auction__card-bag">
+                                <i class="fa-solid fa-bag-shopping"></i>
+                                place bid
+                            </p>
+                            <p class="auction__card-time">
+                                5 : 22 : 57 : 47
+                            </p>
+                        </div>
+                        <div class="auction__card-bottom">
+                            <div class="auction__title">
+                                <h5>Hamlet Contemplanents</h5>
+                                <span>BSC</span>
+                            </div>
+                            <div class="auction__creator">
+                                <div class="creator_left">
+                                    <img src="assets/images/04_Top Seller/avt-4.jpg" alt="avatarr">
+                                    <div class="creator__info">
+                                        <span>creator</span>
+                                        <a>salvadordali</a>
+                                    </div>
+                                </div>
+                                <div class="creator_right">
+                                    <span>Current Bid</span>
+                                    <h5>4.89 ETH</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="auction__card">
+                        <div class="auction__card-top">
+                            <img class="card__img" src="assets/images/03_Live Auctions/image-box-11.jpg" alt="">
+                            <p class="auction__card-like">
+                                <i class="fa-regular fa-heart"></i>
+                                100
+                            </p>
+                            <p class="auction__card-bag">
+                                <i class="fa-solid fa-bag-shopping"></i>
+                                place bid
+                            </p>
+                            <p class="auction__card-time">
+                                5 : 22 : 57 : 47
+                            </p>
+                        </div>
+                        <div class="auction__card-bottom">
+                            <div class="auction__title">
+                                <h5>Hamlet Contemplanents</h5>
+                                <span>BSC</span>
+                            </div>
+                            <div class="auction__creator">
+                                <div class="creator_left">
+                                    <img src="assets/images/04_Top Seller/avt-3.jpg" alt="avatarr">
+                                    <div class="creator__info">
+                                        <span>creator</span>
+                                        <a>salvadordali</a>
+                                    </div>
+                                </div>
+                                <div class="creator_right">
+                                    <span>Current Bid</span>
+                                    <h5>4.89 ETH</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="auction__card">
+                        <div class="auction__card-top">
+                            <img class="card__img" src="assets/images/03_Live Auctions/image-box-10.jpg" alt="">
+                            <p class="auction__card-like">
+                                <i class="fa-regular fa-heart"></i>
+                                100
+                            </p>
+                            <p class="auction__card-bag">
+                                <i class="fa-solid fa-bag-shopping"></i>
+                                place bid
+                            </p>
+                            <p class="auction__card-time">
+                                5 : 22 : 57 : 47
+                            </p>
+                        </div>
+                        <div class="auction__card-bottom">
+                            <div class="auction__title">
+                                <h5>Hamlet Contemplanents</h5>
+                                <span>BSC</span>
+                            </div>
+                            <div class="auction__creator">
+                                <div class="creator_left">
+                                    <img src="assets/images/04_Top Seller/avt-2.jpg" alt="avatarr">
+                                    <div class="creator__info">
+                                        <span>creator</span>
+                                        <a>salvadordali</a>
+                                    </div>
+                                </div>
+                                <div class="creator_right">
+                                    <span>Current Bid</span>
+                                    <h5>4.89 ETH</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="slider__navigate">
+                    <div class="slider__navigate-prev">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </div>
+                    <div class="slider__navigate-middle">
+                        <span class="slider__circle active-slider"></span>
+                        <span class="slider__circle"></span>
+                        <span class="slider__circle"></span>
+                        <span class="slider__circle"></span>
+                    </div>
+                    <div class="slider__navigate-next">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                </div>
             </section>
+           
         </main>
 
         <footer>sdsd</footer>
