complate section seller

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/hero.css">
     <link rel="stylesheet" href="assets/css/auctions.css">
+    <link rel="stylesheet" href="assets/css/seller.css">
 </head>
 
 <body>
@@ -308,7 +309,71 @@
                     </div>
                 </div>
             </section>
-           
+            <section id="top-seller">
+                <div class="seller__top">
+                    <h4 class="seller__top-left">Top seller</h4>
+                    <h4 class="seller__top-right">
+                        <span class="seller__prev">
+                            <i class="fa-solid fa-chevron-left"></i>
+                        </span>
+                        <span class="seller__next">
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </span>
+                    </h4>
+                </div>
+                <div class="seller__bottom">
+                    <div class="seller_card">
+                        <img src="assets/images/04_Top Seller/avt-1.jpg" alt="avatarr">
+                        <h5>Crispin</h5>
+                        <span>214.2 eth</span>
+                    </div>
+                    <div class="seller_card">
+                        <img src="assets/images/04_Top Seller/avt-2.jpg" alt="avatarr">
+                        <h5>Crispin</h5>
+                        <span>214.2 eth</span>
+                    </div>
+                    <div class="seller_card">
+                        <img src="assets/images/04_Top Seller/avt-3.jpg" alt="avatarr">
+                        <h5>Crispin</h5>
+                        <span>214.2 eth</span>
+                    </div>
+                    <div class="seller_card">
+                        <img src="assets/images/04_Top Seller/avt-4.jpg" alt="avatarr">
+                        <h5>Crispin</h5>
+                        <span>214.2 eth</span>
+                    </div>
+                    <div class="seller_card">
+                        <img src="assets/images/04_Top Seller/avt-5.jpg" alt="avatarr">
+                        <h5>Crispin</h5>
+                        <span>214.2 eth</span>
+                    </div>
+                    <div class="seller_card">
+                        <img src="assets/images/04_Top Seller/avt-6.jpg" alt="avatarr">
+                        <h5>Crispin</h5>
+                        <span>214.2 eth</span>
+                    </div>
+                    <div class="seller_card">
+                        <img src="assets/images/04_Top Seller/avt-7.jpg" alt="avatarr">
+                        <h5>Crispin</h5>
+                        <span>214.2 eth</span>
+                    </div>
+                    <div class="seller_card">
+                        <img src="assets/images/04_Top Seller/avt-8.jpg" alt="avatarr">
+                        <h5>Crispin</h5>
+                        <span>214.2 eth</span>
+                    </div>
+                    <div class="seller_card">
+                        <img src="assets/images/04_Top Seller/avt-9.jpg" alt="avatarr">
+                        <h5>Crispin</h5>
+                        <span>214.2 eth</span>
+                    </div>
+                    <div class="seller_card">
+                        <img src="assets/images/04_Top Seller/avt-6.jpg" alt="avatarr">
+                        <h5>Crispin</h5>
+                        <span>214.2 eth</span>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer>sdsd</footer>
