update section hero

--- a/index.html
+++ b/index.html
@@ -374,6 +374,17 @@
                     </div>
                 </div>
             </section>
+            <section id="picks">
+                <div class="picks_top">
+                    <h5>today's picks</h5>
+                    <a href="#">Explore more</a>
+                </div>
+                <div class="picks_middle">
+                    <div class="picks_middle-left"></div>
+                    <div class="picks_middle-right"></div>
+                </div>
+                <div class="picks_bottom"></div>
+            </section>
         </main>
 
         <footer>sdsd</footer>
