--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/hero.css">
     <link rel="stylesheet" href="assets/css/auctions.css">
     <link rel="stylesheet" href="assets/css/seller.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 
 <body>
@@ -387,7 +388,42 @@
             </section>
         </main>
 
-        <footer>sdsd</footer>
+        <footer id="footer">
+            <div class="footer__wrapper">
+                <div class="footer__logo" >
+                    <img src="assets/images/01_header/logo_dark.png" alt="logo footer">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat modi consequatur quasi quos pariatur! Voluptatum non at accusantium quasi aliquam!</p>
+                </div>
+                <div class="footer__account">
+                    <h5 class="footer__title">my account</h5>
+                    <a href="#" class="footer__lik">authors</a>
+                    <a href="#" class="footer__lik">collation</a>
+                    <a href="#" class="footer__lik">author profile</a>
+                    <a href="#" class="footer__lik">create item</a>
+                </div>
+                <div class="footer__resource">
+                    <h5 class="footer__title">resource</h5>
+                    <a href="#" class="footer__lik">help &AMP; support</a>
+                    <a href="#" class="footer__lik">live auctions</a>
+                    <a href="#" class="footer__lik">item details</a>
+                    <a href="#" class="footer__lik">activity</a>
+                </div>
+                <div class="footer__company">
+                    <h5 class="footer__title">company</h5>
+                    <a href="#" class="footer__lik">explore</a>
+                    <a href="#" class="footer__lik">contact us</a>
+                    <a href="#" class="footer__lik">our blog</a>
+                    <a href="#" class="footer__lik">Faq</a>
+                </div>
+                <div class="footer__subscribe">
+                    <h5 class="footer__title">subscribe us</h5>
+                    <form class="footer__form" method="post">
+                            <input class="subscribe__input" type="email" placeholder="info@yourgmail">
+                            <button class="footer__submit" type="submit"></button>
+                    </form>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
