complate section guideline

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/hero.css">
     <link rel="stylesheet" href="assets/css/auctions.css">
     <link rel="stylesheet" href="assets/css/seller.css">
+    <link rel="stylesheet" href="assets/css/guideline.css">
     <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 
@@ -386,44 +387,90 @@
                 </div>
                 <div class="picks_bottom"></div>
             </section>
-        </main>
-
-        <footer id="footer">
-            <div class="footer__wrapper">
-                <div class="footer__logo" >
-                    <img src="assets/images/01_header/logo_dark.png" alt="logo footer">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat modi consequatur quasi quos pariatur! Voluptatum non at accusantium quasi aliquam!</p>
+            <section id="guideline">
+                <h2>Create And Sell Your NFTs</h2>
+                <div class="guideline__steps">
+                    <div class="guideline__step">
+                        <i class="guideline__step-icon"></i>
+                        <h3 class="guideline__step-heading">
+                            <a href="#">Set Up Your Wallet</a>
+                        </h3>
+                        <p class="guideline__step-content">
+                            Wallet that is functional for NFT purchasing. You may have
+                            a Coinbase account at this point, but very few are actually set up to buy an NFT.
+                        </p>
+                    </div>
+                    <div class="guideline__step">
+                        <i class="guideline__step-icon"></i>
+                        <h3 class="guideline__step-heading">
+                            <a href="#">Set Up Your Wallet</a>
+                        </h3>
+                        <p class="guideline__step-content">
+                            Wallet that is functional for NFT purchasing. You may have
+                            a Coinbase account at this point, but very few are actually set up to buy an NFT.
+                        </p>
+                    </div>
+                    <div class="guideline__step">
+                        <i class="guideline__step-icon"></i>
+                        <h3 class="guideline__step-heading">
+                            <a href="#">Set Up Your Wallet</a>
+                        </h3>
+                        <p class="guideline__step-content">
+                            Wallet that is functional for NFT purchasing. You may have
+                            a Coinbase account at this point, but very few are actually set up to buy an NFT.
+                        </p>
+                    </div>
+                    <div class="guideline__step">
+                        <i class="guideline__step-icon"></i>
+                        <h3 class="guideline__step-heading">
+                            <a href="#">Set Up Your Wallet</a>
+                        </h3>
+                        <p class="guideline__step-content">
+                            Wallet that is functional for NFT purchasing. You may have
+                            a Coinbase account at this point, but very few are actually set up to buy an NFT.
+                        </p>
+                    </div>
                 </div>
-                <div class="footer__account">
-                    <h5 class="footer__title">my account</h5>
-                    <a href="#" class="footer__lik">authors</a>
-                    <a href="#" class="footer__lik">collation</a>
-                    <a href="#" class="footer__lik">author profile</a>
-                    <a href="#" class="footer__lik">create item</a>
-                </div>
-                <div class="footer__resource">
-                    <h5 class="footer__title">resource</h5>
-                    <a href="#" class="footer__lik">help &AMP; support</a>
-                    <a href="#" class="footer__lik">live auctions</a>
-                    <a href="#" class="footer__lik">item details</a>
-                    <a href="#" class="footer__lik">activity</a>
-                </div>
-                <div class="footer__company">
-                    <h5 class="footer__title">company</h5>
-                    <a href="#" class="footer__lik">explore</a>
-                    <a href="#" class="footer__lik">contact us</a>
-                    <a href="#" class="footer__lik">our blog</a>
-                    <a href="#" class="footer__lik">Faq</a>
-                </div>
-                <div class="footer__subscribe">
-                    <h5 class="footer__title">subscribe us</h5>
-                    <form class="footer__form" method="post">
-                            <input class="subscribe__input" type="email" placeholder="info@yourgmail">
-                            <button class="footer__submit" type="submit"></button>
-                    </form>
-                </div>
+    </div>
+    </section>
+    </main>
+    <footer id="footer">
+        <div class="footer__wrapper">
+            <div class="footer__logo">
+                <img src="assets/images/01_header/logo_dark.png" alt="logo footer">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat modi consequatur quasi quos
+                    pariatur! Voluptatum non at accusantium quasi aliquam!</p>
             </div>
-        </footer>
+            <div class="footer__account">
+                <h5 class="footer__title">my account</h5>
+                <a href="#" class="footer__lik">authors</a>
+                <a href="#" class="footer__lik">collation</a>
+                <a href="#" class="footer__lik">author profile</a>
+                <a href="#" class="footer__lik">create item</a>
+            </div>
+            <div class="footer__resource">
+                <h5 class="footer__title">resource</h5>
+                <a href="#" class="footer__lik">help &AMP; support</a>
+                <a href="#" class="footer__lik">live auctions</a>
+                <a href="#" class="footer__lik">item details</a>
+                <a href="#" class="footer__lik">activity</a>
+            </div>
+            <div class="footer__company">
+                <h5 class="footer__title">company</h5>
+                <a href="#" class="footer__lik">explore</a>
+                <a href="#" class="footer__lik">contact us</a>
+                <a href="#" class="footer__lik">our blog</a>
+                <a href="#" class="footer__lik">Faq</a>
+            </div>
+            <div class="footer__subscribe">
+                <h5 class="footer__title">subscribe us</h5>
+                <form class="footer__form" method="post">
+                    <input class="subscribe__input" type="email" placeholder="info@yourgmail">
+                    <button class="footer__submit" type="submit"></button>
+                </form>
+            </div>
+        </div>
+    </footer>
     </div>
 </body>
 
