update icon button create

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </div>
                         <div class="slider__left-bottom">
                             <button class="btn btn-explore">
-                                <i class="fa-solid fa-window-restore"></i>
+                                <i class="fa-solid fa-rocket"></i>
                                 <p>Explore</p>
                             </button>
                             <button class="btn btn-create">
