--- a/index.html
+++ b/index.html
@@ -58,19 +58,25 @@
                 <div class="header__right">
                     <div class="search__icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                        <form class="header__search-box">
+                        <form class="header__search-box active-search">
                             <i class="fa-solid fa-magnifying-glass"></i>
                             <input class="search__box-input" placeholder="search..." type="text">
                         </form>
                     </div>
-                    <div class="header__wallet">
+                    <a class="header__wallet">
                         <i class="fa-solid fa-briefcase"></i>
-                    </div>
-                    <div class="header__sun">
-                        <i class="fa-light fa-moon"></i>
-                    </div>
-                    <div class="header__moon">
-                        <i class="fa-light fa-moon"></i>
+                        wallet connect
+                    </a>
+                    <div class="header__mode">
+                        <h5>dark mode <br>
+                            <b>available</b>
+                        </h5>
+                        <div class="header__sun">
+                            <img src="assets/images/01_header/sun.png" alt="sun mode">
+                        </div>
+                        <div class="header__moon">
+                            <img src="assets/images/01_header/moon-2.png" alt="moon mode">
+                        </div>
                     </div>
                 </div>
             </div>
