show box search for test

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="header__right">
                     <div class="search__icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                        <form class="header__search-box active-search">
+                        <form class="header__search-box">
                             <i class="fa-solid fa-magnifying-glass"></i>
                             <input class="search__box-input" placeholder="search..." type="text">
                         </form>
