change showing header complate

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="container">
-        <header id="header">
+        <header id="header" class="target">
             <div class="header__wrapper">
                 <div class="header__left">
                     <img src="assets/images/01_header/logo_dark.png" alt="logo">
@@ -79,17 +79,20 @@
                         </div>
                     </div>
                 </div>
+                <div class="menu target"></div>
             </div>
         </header>
         <main>
             <section id="hero" class="slider">
-                <div class="shape circle__shape-16"></div>
-                <div class="shape circle__shape-22"></div>
-                <div class="shape circle__shape-32"></div>
-                <div class="shape circle__shape-48"></div>
-                <div class="shape circle__shape-51"></div>
-                <div class="shape circle__shape-52"></div>
-                <div class="shape circle__shape-68"></div>
+                <div class="bg-circle">
+                    <div class="shape circle__shape-16"></div>
+                    <div class="shape circle__shape-22"></div>
+                    <div class="shape circle__shape-32"></div>
+                    <div class="shape circle__shape-48"></div>
+                    <div class="shape circle__shape-51"></div>
+                    <div class="shape circle__shape-52"></div>
+                    <div class="shape circle__shape-68"></div>
+                </div>
                 <div class="hero__wrapper">
                     <div class="slider__left">
                         <div class="slider__left-top">
