--- a/index.html
+++ b/index.html
@@ -32,26 +32,128 @@
                         <div class="navbar__link">
                             <span>Home</span>
                             <i class="fa-solid fa-angle-down"></i>
+                            <ul class="sub__menu-one">
+                                <li>
+                                    home 1
+                                </li>
+                                <li>
+                                    home 2
+                                </li>
+                                <li>
+                                    home 3
+                                </li>
+                                <li>
+                                    home 4
+                                </li>
+                                <li class="has-child">
+                                    home 6
+                                    <ul class="sub__menu-two">
+                                        <li>
+                                           sub home 1
+                                        </li>
+                                        <li>
+                                           sub home 2
+                                        </li>
+                                        <li>
+                                           sub home 3
+                                        </li>
+                                        <li>
+                                           sub home 4
+                                        </li>
+                                        <li>
+                                           sub home 6
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
                         <div class="navbar__link">
                             <span>explore</span>
                             <i class="fa-solid fa-angle-down"></i>
+                            <ul class="sub__menu-one">
+                                <li>
+                                    explore 1
+                                </li>
+                                <li>
+                                    explore 2
+                                </li>
+                                <li>
+                                    explore 3
+                                </li>
+                            </ul>
                         </div>
                         <div class="navbar__link">
                             <span>activity</span>
                             <i class="fa-solid fa-angle-down"></i>
+                            <ul class="sub__menu-one">
+                                <li>
+                                    activity 1
+                                </li>
+                                <li>
+                                    activity 2
+                                </li>
+                                <li>
+                                    activity 3
+                                </li>
+                                <li>
+                                    activity 4
+                                </li>
+                                <li>
+                                    activity 6
+                                </li>
+                            </ul>
                         </div>
                         <div class="navbar__link">
                             <span>Community</span>
                             <i class="fa-solid fa-angle-down"></i>
+                            <ul class="sub__menu-one">
+                                <li>
+                                    Community 1
+                                </li>
+                                <li>
+                                    Community 2
+                                </li>
+                                <li>
+                                    Community 3
+                                </li>
+                                <li>
+                                    Community 4
+                                </li>
+                                <li>
+                                    Community 6
+                                </li>
+                            </ul>
                         </div>
                         <div class="navbar__link">
                             <span>Pages</span>
                             <i class="fa-solid fa-angle-down"></i>
+                            <ul class="sub__menu-one">
+                                <li>
+                                    Page 1
+                                </li>
+                                <li>
+                                    Page 2
+                                </li>
+                                
+                            </ul>
                         </div>
                         <div class="navbar__link">
                             <span>Contact</span>
                             <i class="fa-solid fa-angle-down"></i>
+                            <ul class="sub__menu-one">
+                                <li>
+                                    Contact 1
+                                </li>
+                                <li>
+                                    Contact 2
+                                </li>
+                                <li>
+                                    Contact 3
+                                </li>
+                                <li>
+                                    Contact 4
+                                </li>
+                            </ul>
                         </div>
                     </nav>
                 </div>
