update font size content hero

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
                                 <li>
                                     explore 3
                                 </li>
+                                <li>
+                                    explore 4
+                                </li>
+                                <li>
+                                    explore 6
+                                </li>
                             </ul>
                         </div>
                         <div class="navbar__link">
@@ -146,12 +152,6 @@
                                 </li>
                                 <li>
                                     Contact 2
-                                </li>
-                                <li>
-                                    Contact 3
-                                </li>
-                                <li>
-                                    Contact 4
                                 </li>
                             </ul>
                         </div>
