update styles and active switch mode

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="theme-dark">
 
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 
-<body>
+<body >
     <div class="container">
         <header id="header" class="target">
             <div class="header__wrapper">
