--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Axies</title>
+    <link rel="shortcut icon" href="assets/images/01_header/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,7 +21,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 
-<body >
+<body>
     <div class="container">
         <header id="header" class="target">
             <div class="header__wrapper">
@@ -49,19 +50,19 @@
                                     home 6
                                     <ul class="sub__menu-two">
                                         <li>
-                                           sub home 1
+                                            sub home 1
                                         </li>
                                         <li>
-                                           sub home 2
+                                            sub home 2
                                         </li>
                                         <li>
-                                           sub home 3
+                                            sub home 3
                                         </li>
                                         <li>
-                                           sub home 4
+                                            sub home 4
                                         </li>
                                         <li>
-                                           sub home 6
+                                            sub home 6
                                         </li>
                                     </ul>
                                 </li>
@@ -140,7 +141,7 @@
                                 <li>
                                     Page 2
                                 </li>
-                                
+
                             </ul>
                         </div>
                         <div class="navbar__link">
@@ -496,7 +497,7 @@
                 </div>
                 <div class="picks__middle">
                     <div class="picks__middle-left">
-                        <span class="btn-pick picks__category">
+                        <a class="btn-pick picks__category">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M5 10H7C9 10 10 9 10 7V5C10 3 9 2 7 2H5C3 2 2 3 2 5V7C2 9 3 10 5 10Z"
@@ -516,8 +517,8 @@
                                     stroke-linejoin="round"></path>
                             </svg>
                             <p>category</p>
-                        </span>
-                        <span class="btn-pick picks__price">
+                        </a>
+                        <a class="btn-pick picks__price">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -532,8 +533,8 @@
                                 </path>
                             </svg>
                             <p>price range</p>
-                        </span>
-                        <span class=" btn-pick picks__sale">
+                        </a>
+                        <a class=" btn-pick picks__sale">
                             <svg width="18" height="22" viewBox="0 0 18 22" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -542,8 +543,8 @@
                                     stroke-linejoin="round"></path>
                             </svg>
                             <p>sale type</p>
-                        </span>
-                        <span class="btn-pick picks_category">
+                        </a>
+                        <a class="btn-pick picks_category">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M3.16992 7.44043L11.9999 12.5504L20.7699 7.47043" stroke="white"
@@ -556,6 +557,7 @@
                                 </path>
                             </svg>
                             <p>blockchain</p>
+                        </a>
                     </div>
                     <div class="picks__middle-right">
                         <span class="btn-pick picks_sort">
